# thermostat

./: .gitignore  CMakeLists.txt  README.md  changelog.txt  otasend.sh  sdkconfig  sdkconfig.old
main/: CMakeLists.txt  Kconfig.projbuild  app_main.c  device  device.c  device.h  display.c  display.h  ds18b20.c  factoryreset.c  factoryreset.h  flashmem.c  flashmem.h  heater.c  heater.h  homeapp.h  ldrreader.c  ldrreader.h  max7219.h  ntcreader.c  ntcreader.h  ota  pidcontroller.c  pidcontroller.h  statistics  statistics.c  statistics.h  temperature  temperatures.c  temperatures.h  thermostat.h  throttle.c  throttle.h
main/apwebserver/: server.c  server.h
main/ota/: ota.c  ota.h
